--- a/index.html
+++ b/index.html
@@ -15,35 +15,39 @@
 		<!-- Parallax Main -->
 		<div class="parallax parallax-head scroll_target" id="home">
 			<!-- Navbar -->
+
 			<nav class="navbar navbar-default navbar-fixed-top">
 				<div class="container-fluid nav_container">
-					<div class="row nav_row">
-						<div class="col-md-5 col-md-push-7">
-							<nav>
-								<div class="col-md-2">
-									<a
-										class="active nav_link"
-										href="#home"
-										>Home</a
-									>
-								</div>
-								<div class="col-md-2">
-									<a class="nav_link" href="#about"
-										>About</a
-									>
-								</div>
-								<div class="col-md-2">
-									<a class="nav_link" href="#samples"
-										>Samples</a
-									>
-								</div>
-								<div class="col-md-2">
-									<a class="nav_link" href="#contact"
-										>Contact</a
-									>
-								</div>
-							</nav>
-						</div>
+					<div class="navbar-header">
+						<button
+							type="button"
+							class="navbar-toggle collapsed"
+							data-toggle="collapse"
+							data-target="#mainNav"
+						>
+							<span class="sr-only"
+								>Toggle Navigation</span
+							>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+					</div>
+
+					<div class="collapse navbar-collapse" id="mainNav">
+						<ul class="nav navbar-nav navbar-right">
+							<li class="active">
+								<a href="#home"
+									>Home
+									<span class="sr-only"
+										>(current)</span
+									></a
+								>
+							</li>
+							<li><a href="#about">About</a></li>
+							<li><a href="#samples">Samples</a></li>
+							<li><a href="#contact">Contact</a></li>
+						</ul>
 					</div>
 				</div>
 			</nav>
@@ -53,7 +57,7 @@
 			<div class="container abs_center">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<h1>Beach Love Designs by V</h1>
+						<h1 id="title">Beach Love Designs by V</h1>
 					</div>
 				</div>
 			</div>
@@ -61,19 +65,9 @@
 		</div>
 		<!-- Parallax Main -->
 
-		<!-- Visit Shop Button -->
-		<h4>
-			<a
-				class="btn btn-default shop_button"
-				href="https://www.etsy.com/shop/BeachLoveDesignsByV"
-				target="_blank"
-				>Visit Shop</a
-			>
-		</h4>
-		<!-- Visit Shop Button -->
-
 		<!-- About Section -->
-		<div class="container-fluid section_about scroll_target" id="about">
+		<div class="container-fluid section_about scroll_target parallax" id="about">
+			<div class="container about_container">
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<br />
@@ -81,13 +75,13 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-md-push-3">
+				<div class="col-md-8 col-md-push-2">
 					<hr />
 				</div>
 			</div>
 			<br />
 			<div class="row">
-				<div class="col-md-6 col-md-push-3">
+				<div class="col-md-8 col-md-push-2">
 					<p>
 						Beautiful Beach Stones, Holey Stones, Beach
 						Pottery, Sea Glass, Ocean Sandstone, Ocean Jasper,
@@ -101,7 +95,7 @@
 			<br class="special_br" />
 			<br class="special_br" />
 			<div class="row">
-				<div class="col-md-6 col-md-push-3">
+				<div class="col-md-8 col-md-push-2">
 					<p>
 						HOLEY STONES- (aka Lucky Stones/Hag
 						Stones/Talisman Stones) I love collecting these
@@ -122,7 +116,7 @@
 			<br class="special_br" />
 			<br class="special_br" />
 			<div class="row">
-				<div class="col-md-6 col-md-push-3">
+				<div class="col-md-8 col-md-push-2">
 					<p>
 						BEACH POTTERY- These beautiful rustic beach
 						pottery shards are so much fun to find. Pottery
@@ -136,7 +130,7 @@
 			<br class="special_br" />
 			<br class="special_br" />
 			<div class="row">
-				<div class="col-md-6 col-md-push-3">
+				<div class="col-md-8 col-md-push-2">
 					<p>
 						ESSENTIAL OIL DIFFUSERS- Porous beach stones make
 						great essential oil diffusers. Just dab a little
@@ -148,11 +142,14 @@
 			<br />
 			<br />
 		</div>
+		</div>
 		<!-- About Section -->
 
 		<div class="parallax parallax-section parallax-2"></div>
 
-		<div class="container-fluid section scroll_target" id="samples">
+		<!-- Sample Section -->
+		<div class="container-fluid section section_sample scroll_target parallax" id="samples">
+			<div class="container sample_container">
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<br />
@@ -160,16 +157,387 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-md-push-3">
+				<div class="col-md-8 col-md-push-2">
 					<hr />
 				</div>
 			</div>
 			<br />
+
+			<!-- Carousel Section -->
+			<div class="container full_c" id="">
+				<div class="row">
+					<div class="col-md-12">
+						<div
+							id="carousel-example-generic"
+							class="carousel slide"
+							data-ride="carousel"
+						>
+							<!-- Indicators -->
+							<ol class="carousel-indicators">
+								<li
+									data-target="#carousel-example-generic"
+									data-slide-to="0"
+									class="active"
+								></li>
+								<li
+									data-target="#carousel-example-generic"
+									data-slide-to="1"
+								></li>
+								<li
+									data-target="#carousel-example-generic"
+									data-slide-to="2"
+								></li>
+								<li
+									data-target="#carousel-example-generic"
+									data-slide-to="3"
+								></li>
+								<li
+									data-target="#carousel-example-generic"
+									data-slide-to="4"
+								></li>
+								<li
+									data-target="#carousel-example-generic"
+									data-slide-to="5"
+								></li>
+								<li
+									data-target="#carousel-example-generic"
+									data-slide-to="6"
+								></li>
+								<li
+									data-target="#carousel-example-generic"
+									data-slide-to="7"
+								></li>
+								<li
+									data-target="#carousel-example-generic"
+									data-slide-to="8"
+								></li>
+							</ol>
+
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner" role="listbox">
+								<div class="item active">
+									<div class="c_container">
+										<div
+											class="carousel-caption"
+										></div>
+										<img
+											src="neck4.jpg"
+											alt="..."
+											type="button"
+											data-toggle="modal"
+											data-target="#myModal"
+											onclick="loadImage(4)"
+										/>
+									</div>
+								</div>
+								<div class="item">
+									<div class="c_container">
+										<div
+											class="carousel-caption"
+										></div>
+										<img
+											src="neck5.jpg"
+											alt="..."
+											type="button"
+											data-toggle="modal"
+											data-target="#myModal"
+											onclick="loadImage(5)"
+										/>
+									</div>
+								</div>
+								<div class="item">
+									<div class="c_container">
+										<div
+											class="carousel-caption"
+										></div>
+										<img
+											src="neck6.jpg"
+											alt="..."
+											type="button"
+											data-toggle="modal"
+											data-target="#myModal"
+											onclick="loadImage(6)"
+										/>
+									</div>
+								</div>
+								<div class="item">
+									<div class="c_container">
+										<div
+											class="carousel-caption"
+										></div>
+										<img
+											src="neck1.jpg"
+											alt="..."
+											type="button"
+											data-toggle="modal"
+											data-target="#myModal"
+											onclick="loadImage(1)"
+										/>
+									</div>
+								</div>
+								<div class="item">
+									<div class="c_container">
+										<div
+											class="carousel-caption"
+										></div>
+										<img
+											src="neck2.jpg"
+											alt="..."
+											type="button"
+											data-toggle="modal"
+											data-target="#myModal"
+											onclick="loadImage(2)"
+										/>
+									</div>
+								</div>
+								<div class="item">
+									<div class="c_container">
+										<div
+											class="carousel-caption"
+										></div>
+										<img
+											src="neck3.jpg"
+											alt="..."
+											type="button"
+											data-toggle="modal"
+											data-target="#myModal"
+											onclick="loadImage(3)"
+										/>
+									</div>
+								</div>
+								<div class="item">
+									<div class="c_container">
+										<div
+											class="carousel-caption"
+										></div>
+										<img
+											src="neck7.jpg"
+											alt="..."
+											type="button"
+											data-toggle="modal"
+											data-target="#myModal"
+											onclick="loadImage(7)"
+										/>
+									</div>
+								</div>
+								<div class="item">
+									<div class="c_container">
+										<div
+											class="carousel-caption"
+										></div>
+										<img
+											src="neck8.jpg"
+											alt="..."
+											type="button"
+											data-toggle="modal"
+											data-target="#myModal"
+											onclick="loadImage(8)"
+										/>
+									</div>
+								</div>
+								<div class="item">
+									<div class="c_container">
+										<div
+											class="carousel-caption"
+										></div>
+										<img
+											src="neck9.jpg"
+											alt="..."
+											type="button"
+											data-toggle="modal"
+											data-target="#myModal"
+											onclick="loadImage(9)"
+										/>
+									</div>
+								</div>
+							</div>
+
+							<!-- Controls -->
+							<a
+								class="left carousel-control"
+								href="#carousel-example-generic"
+								role="button"
+								data-slide="prev"
+							>
+								<span
+									class="glyphicon glyphicon-chevron-left"
+									aria-hidden="true"
+								></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a
+								class="right carousel-control"
+								href="#carousel-example-generic"
+								role="button"
+								data-slide="next"
+							>
+								<span
+									class="glyphicon glyphicon-chevron-right"
+									aria-hidden="true"
+								></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Imgs -->
+			<div class="row" id="img_grid">
+				<div class="container">
+					<div class="pictures">
+						<img
+							src="neck4.jpg"
+							alt=""
+							class="img-responsive img-thumbnail sample_imgs"
+							id="neck1"
+							type="button"
+							data-toggle="modal"
+							data-target="#myModal"
+							onclick="loadImage(4)"
+						/>
+						<img
+							src="neck5.jpg"
+							alt=""
+							class="img-responsive img-thumbnail sample_imgs"
+							id="neck2"
+							type="button"
+							data-toggle="modal"
+							data-target="#myModal"
+							onclick="loadImage(5)"
+						/>
+						<img
+							src="neck6.jpg"
+							alt=""
+							class="img-responsive img-thumbnail sample_imgs"
+							id="neck3"
+							type="button"
+							data-toggle="modal"
+							data-target="#myModal"
+							onclick="loadImage(6)"
+						/>
+					</div>
+					<div class="pictures">
+						<img
+							src="neck1.jpg"
+							alt=""
+							class="img-responsive img-thumbnail sample_imgs"
+							id="neck4"
+							type="button"
+							data-toggle="modal"
+							data-target="#myModal"
+							onclick="loadImage(1)"
+						/>
+						<img
+							src="neck2.jpg"
+							alt=""
+							class="img-responsive img-thumbnail sample_imgs"
+							id="neck5"
+							type="button"
+							data-toggle="modal"
+							data-target="#myModal"
+							onclick="loadImage(2)"
+						/>
+						<img
+							src="neck3.jpg"
+							alt=""
+							class="img-responsive img-thumbnail sample_imgs"
+							id="neck6"
+							type="button"
+							data-toggle="modal"
+							data-target="#myModal"
+							onclick="loadImage(3)"
+						/>
+					</div>
+					<div class="pictures">
+						<img
+							src="neck7.jpg"
+							alt=""
+							class="img-responsive img-thumbnail sample_imgs"
+							id="neck7"
+							type="button"
+							data-toggle="modal"
+							data-target="#myModal"
+							onclick="loadImage(7)"
+						/>
+						<img
+							src="neck8.jpg"
+							alt=""
+							class="img-responsive img-thumbnail sample_imgs"
+							id="neck8"
+							type="button"
+							data-toggle="modal"
+							data-target="#myModal"
+							onclick="loadImage(8)"
+						/>
+						<img
+							src="neck9.jpg"
+							alt=""
+							class="img-responsive img-thumbnail sample_imgs"
+							id="neck9"
+							type="button"
+							data-toggle="modal"
+							data-target="#myModal"
+							onclick="loadImage(9)"
+						/>
+					</div>
+				</div>
+			</div>
 		</div>
+		</div>
+
+		<div
+			class="modal fade"
+			id="myModal"
+			tabindex="-1"
+			role="dialog"
+			aria-labelledby="myModalLabel"
+		>
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button
+							type="button"
+							class="close"
+							data-dismiss="modal"
+							aria-label="Close"
+						>
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">
+							Beach Necklace
+						</h4>
+					</div>
+					<div class="modal-body">
+						<div class="modal_container">
+							<img
+								src=""
+								alt=""
+								class="img-responsive"
+								id="modalTarget"
+							/>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button
+							type="button"
+							class="btn btn-default"
+							data-dismiss="modal"
+						>
+							Close
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Sample Section -->
 
 		<div class="parallax parallax-section parallax-3"></div>
 
-		<div class="container-fluid section scroll_target" id="contact">
+		<!-- Contact Section -->
+		<div class="container-fluid section section_contact parallax scroll_target" id="contact">
+			<div class="container contact_container">
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<br />
@@ -177,15 +545,107 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 col-md-push-3">
+				<div class="col-md-8 col-md-push-2">
 					<hr />
 				</div>
 			</div>
 			<br />
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-push-2">
+							<div class="col-sm-12 contact_form">
+									<form action="#">
+										<div class="form-group">
+											<label for=""
+												>Name:
+												<span
+												></span></label
+											><input
+												type="text"
+												class="form-control"
+												placeholder="name"
+											/>
+										</div>
+										<div class="form-group">
+											<label for=""
+												>E-mail:
+												<span
+												></span></label
+											><input
+												type="text"
+												class="form-control"
+												placeholder="e-mail"
+											/>
+										</div>
+										<div class="form-group">
+											<label for=""
+												>Subject:
+												<span
+												></span></label
+											><input
+												type="text"
+												class="form-control"
+												placeholder="subject"
+											/>
+										</div>
+										<div class="form-group">
+											<label for=""
+												>Message:
+												<span
+												></span
+												><textarea
+												placeholder="message"
+													cols="60"
+													rows="3"
+													class="form-control"
+												></textarea
+											></label>
+										</div>
+										<div class="checkbox">
+											<label for="">
+												<input type="checkbox"
+													>I'm not a robot</input
+												>
+											</label>
+										</div>
+										<button type="submit" class="btn btn-default center-block">Send Message</button>
+										
+									</form>
+								</div>
+					</div>
+				</div>
+			</div>
 		</div>
+		</div>
+		<!-- Contact Section -->
+
+		<!-- Visit Shop Button -->
+		<footer class="navbar navbar-default navbar-fixed-bottom">
+			<h4>
+				<a
+					class="btn btn-default shop_button"
+					href="https://www.etsy.com/shop/BeachLoveDesignsByV"
+					target="_blank"
+					>Visit Shop</a
+				>
+			</h4>
+		</footer>
+
+		<!-- Visit Shop Button -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/script.js"></script>
+		<script>
+			const modImgs = [];
+			const modalTarget = document.getElementById('modalTarget');
+			for (i = 1; i < 10; i++) {
+				modImgs.push(`neck${i}.jpg`);
+			}
+
+			function loadImage(img) {
+				modalTarget.src = modImgs[img - 1];
+			}
+		</script>
 	</body>
 </html>
